--- a/style.css
+++ b/style.css
@@ -1,11 +1,263 @@
-/* CSS files add styling rules to your content */
+ @import url('https://fonts.googleapis.com/css?family=Monofett&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
 
-body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
-}
+    body {
+        background-color: black;
 
-h1 {
-  font-style: italic;
-  color: #373fff;
-}
+    }
+    a {
+      color: whitesmoke;
+    }
+    a:hover {
+      color: cyan;
+    }
+    a:visited {
+      color: cyan;
+    }
+    #date{
+      color: whitesmoke;
+      position: absolute;
+      right:4%;
+      font-family: 'Bangers', cursive;
+      font-size: 20px;
+      z-index: 200;
+
+    }
+    #time{
+      color: whitesmoke;
+      position: absolute;
+      right:15%;
+      font-family: 'Bangers', cursive;
+      font-size: 20px;
+      z-index: 200;
+
+    }
+    #archives{
+      position: absolute;
+      right:22%;
+      font-family: 'Bangers', cursive;
+      font-size: 20px;
+      z-index: 200;
+
+    }
+    #about1{
+      color: whitesmoke;
+      position: absolute;
+      right:29%;
+      font-family: 'Bangers', cursive;
+      font-size: 20px;
+      z-index: 200;
+      text-decoration: underline;
+
+    }
+
+
+    #title{
+      font-family: 'Monofett';
+      top: -3%;
+      position: absolute;
+      left: 5%;
+      color: white;
+      font-size: 50px;
+
+    }
+    #rect0{
+     background-color: white;
+     width: 2%;
+     height: 17.7%;
+     position: absolute;
+     top: 3.5%;
+     left: 2%;
+    }
+    #about{
+      width: 40%;
+      height: 21%;
+      position: absolute;
+      top: 9%;
+      left: 5%;
+      color: white;
+      font-size: 15px;
+      font-family: 'Courier';
+    }
+    #editor {
+        padding-top: 10;
+        position: absolute;
+        top: 89.5%;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 40%;
+
+    }
+
+    #b2{
+      position: absolute;
+      background-color: black;
+      color: white;
+      top:30%;
+      height: 10%;
+      z-index: 221;
+      width:40.5%;
+      left:0%;
+      font-family: courier;
+    }
+    textarea{
+      border-width: 0px;
+    }
+    #box{
+      margin: 0;
+      top:30%;
+      position: absolute;
+      z-index: 11;
+      left:40%;
+      width: 59.9%;
+      height: 59%;
+      background-color: black;
+      right: 23%;
+      overflow: scroll;
+      border: 1px solid white;
+
+
+    }
+
+
+    #box1{
+      margin: 0;
+      color: cyan;
+      position: absolute;
+      z-index: 11;
+      left:0%;
+      width: 40%;
+      height: 48.5%;
+      background-color: black;
+      right: 23%;
+      top: 40%;
+      font-family: courier;
+      font-size: 12px;
+      overflow: scroll;
+      border: 1px solid white;
+
+    }
+
+
+
+
+   iframe{
+     resize: both;
+    /* zoom: 0.9;
+     -moz-transform:scale(0.9);
+     -moz-transform-origin: 0 0;
+     -webkit-transform:scale(0.9);
+     -webkit-transform-origin: 0 0;
+     -o-transform:scale(0.9);
+     -o-transform-origin: 0 0;
+     -ms-transform:scale(0.9);*/
+   }
+   #desc{
+       position: absolute;
+       background-color: black;
+       color: white;
+       border: 1px solid white;
+       width: 50%;
+       height: 10.5%;
+       left: 0%;
+       top: 130%;
+
+
+   }
+   #name{
+       position: absolute;
+       background-color: black;
+       color: white;
+       top: 130%;
+       border: 1px solid white;
+       height: 10.5%;
+       left: 50%;
+       width: 20%;
+
+   }
+
+   #publish{
+       position: absolute;
+       background-color: black;
+       color: white;
+       border: 1px solid white;
+       height: 11.2%;
+       top: 130%;
+       left: 85%;
+       width: 15%;
+   }
+   #preview{
+       position: absolute;
+       background-color: black;
+       color: white;
+       border: 1px solid white;
+       height: 11.2%;
+       top: 130%;
+       left: 70%;
+       width: 15%;
+   }
+   #lina{
+       position: absolute;
+       top:145%;
+       width: 100%;
+
+
+   }
+   #out{
+       position: absolute;
+       top: 150%;
+       left: 5%;
+       z-index: 111;
+       color: white;
+   }
+   #descout{
+       position: absolute;
+       top: 155%;
+       left: 5%;
+       color: white;
+       font-size: 10px;
+       margin-top: 10px;
+   }
+   #entries{
+     font-family: 'Monofett';
+     position: absolute;
+     top: 155%;
+     color: white;
+     font-size: 50px;
+     left: 37%;
+
+   }
+   #archive{
+
+     top: 185%;
+     position:absolute;
+     width:100%;
+     height:100%;
+     left:2%;
+
+     z-index:110;
+     overflow: scroll;
+
+   }
+   #descarch{
+     width: 50%;
+     height: 21%;
+     position: absolute;
+     top: 170%;
+     left: 3%;
+     color: white;
+     font-size: 15px;
+     font-family: 'Courier';
+     z-index: 110;
+   }
+   #post{
+     height: 65%;
+     width:30%;
+     margin-left:1%;
+     margin-right:1%;
+     overflow: hidden;
+     border-top: 1px solid white;
+     margin-bottom:50px;
+   }
