--- a/style.css
+++ b/style.css
@@ -61,11 +61,11 @@
       position: absolute;
       background-color: black;
       color: white;
-      top:0%;
+      top:120%;
       height: 10%;
       z-index: 221;
       width:33%;
-      left:33%;
+      right:1%;
       font-family: courier;
     }
     textarea{
@@ -76,9 +76,9 @@
       top:10%;
       position: absolute;
       z-index: 11;
-      left:20%;
-      width: 80%;
-      height: 59%;
+      left:0%;
+      width: 100%;
+      height: 69.9%;
       background-color: black;
       right: 23%;
       overflow: scroll;
@@ -94,11 +94,11 @@
       position: absolute;
       z-index: 11;
       left:0%;
-      width: 20%;
+      width: 100%;
       height: 58.5%;
       background-color: black;
       right: 23%;
-      top: 10%;
+      top: 120%;
       font-family: courier;
       font-size: 12px;
       overflow: scroll;
