--- a/style.css
+++ b/style.css
@@ -62,14 +62,18 @@
       background-color: black;
       color: white;
       top:120%;
-      height: 10%;
+      height: 51%;
       z-index: 221;
-      width:33%;
-      right:1%;
+      width:28.5%;
+      right:0px;
       font-family: courier;
     }
+#b2:hover{
+  color: cyan;
+}
     textarea{
       border-width: 0px;
+      resize: both;
     }
     #box{
       margin: 0;
@@ -77,7 +81,8 @@
       position: absolute;
       z-index: 11;
       left:0%;
-      width: 100%;
+      width: 105%;
+      left:-5%;
       height: 69.9%;
       background-color: black;
       right: 23%;
@@ -219,3 +224,6 @@
      z-index: 110;
    }
    
+scrollbar { 
+    display: none; 
+}
