--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     @import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
 
     body {
-        background-color: black;
+        
         overflow-x:hidden;
     }
     a {
@@ -15,7 +15,7 @@
       color: cyan;
     }
     #date{
-      color: whitesmoke;
+      color: #333333;
       position: absolute;
       left:2%;
       font-family: 'Bangers', cursive;
@@ -24,7 +24,7 @@
 
     }
     #time{
-      color: whitesmoke;
+      color: #333333;
       position: absolute;
       right:2%;
       font-family: 'Bangers', cursive;
@@ -64,7 +64,7 @@
       top:120%;
       height: 51%;
       z-index: 221;
-      width:28.5%;
+      width:29.5%;
       right:0px;
       font-family: courier;
     }
@@ -84,7 +84,7 @@
       width: 105%;
       left:-5%;
       height: 69.9%;
-      background-color: black;
+      
       right: 23%;
       overflow: scroll;
       border: 1px solid white;
