--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     @import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
 
     body {
-        
+        background-color: white;
         overflow-x:hidden;
     }
     a {
@@ -83,7 +83,7 @@
       left:0%;
       width: 110%;
       left:-5%;
-      height: 72.9%;
+      height: 72%;
       
       right: 23%;
       overflow: scroll;
